--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>My first Chartist Tests</title>
-    <link rel="stylesheet"
-          href="bower_components/chartist/dist/chartist.min.css">
+     
+
   </head>
   <body>
     <!-- Site content goes here !-->
-    <script src="bower_components/chartist/dist/chartist.min.js"></script>
+    <center>Testing 123</center>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   </body>
 </html>
