--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ var margin = {top: 30, right: 20, bottom: 30, left: 50},
     height = 270 - margin.top - margin.bottom;
 
 // Parse the date / time
-var parseDate = d3.time.format("%d-%b-%y").parse;
+//var parseDate = d3.time.format("%d-%b-%y").parse;
+var parseDate = d3.time.format("%H-%M-%S").parse;
 
 // Set the ranges
 var x = d3.time.scale().range([0, width]);
@@ -48,7 +49,7 @@ var yAxis = d3.svg.axis().scale(y)
 // Define the line
 var valueline = d3.svg.line()
     .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.close); });
+    .y(function(d) { return y(d.value); });
     
 // Adds the svg canvas
 var svg = d3.select("body")
@@ -60,15 +61,16 @@ var svg = d3.select("body")
               "translate(" + margin.left + "," + margin.top + ")");
 
 // Get the data
-d3.csv("data.csv", function(error, data) {
+d3.csv("data1.csv", function(error, data) {
+// d3.csv("data.csv", function(error, data) {
     data.forEach(function(d) {
         d.date = parseDate(d.date);
-        d.close = +d.close;
+        d.value = +d.value;
     });
 
     // Scale the range of the data
     x.domain(d3.extent(data, function(d) { return d.date; }));
-    y.domain([0, d3.max(data, function(d) { return d.close; })]);
+    y.domain([0, d3.max(data, function(d) { return d.value; })]);
 
     // Add the valueline path.
     svg.append("path")
